init customization by adapting custom s3 setup

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -98,6 +98,8 @@ services:
       interval: 5s
       retries: 3
     restart: unless-stopped
+    env_file:
+      - auth.env
     environment:
       GOTRUE_API_HOST: 0.0.0.0
       GOTRUE_API_PORT: 9999
