--- a/docker/auth.env.example
+++ b/docker/auth.env.example
@@ -1,5 +1,12 @@
 # Configuration to be found here: https://github.com/supabase/auth?tab=readme-ov-file#configuration
 
+GOTRUE_SMTP_ADMIN_EMAIL=admin@example.com
+GOTRUE_SMTP_HOST=supabase-mail
+GOTRUE_SMTP_PORT=2500
+GOTRUE_SMTP_USER=fake_mail_user
+GOTRUE_SMTP_PASS=fake_mail_password
+GOTRUE_SMTP_SENDER_NAME=fake_sender
+
 GOTRUE_EXTERNAL_GOOGLE_ENABLED=true
 GOTRUE_EXTERNAL_GOOGLE_CLIENT_ID='YOUR VALUE'
 GOTRUE_EXTERNAL_GOOGLE_SECRET='YOUR VALUE'
