--- a/docker/auth.env.example
+++ b/docker/auth.env.example
@@ -7,6 +7,10 @@ GOTRUE_SMTP_USER=fake_mail_user
 GOTRUE_SMTP_PASS=fake_mail_password
 GOTRUE_SMTP_SENDER_NAME=fake_sender
 
+# Define custom email templates like this
+GOTRUE_MAILER_TEMPLATES_CONFIRMATION=https://path-to-your/confirm-email.html
+GOTRUE_MAILER_TEMPLATES_RECOVERY=https://path-to-your/reset-password.html
+
 GOTRUE_EXTERNAL_GOOGLE_ENABLED=true
 GOTRUE_EXTERNAL_GOOGLE_CLIENT_ID='YOUR VALUE'
 GOTRUE_EXTERNAL_GOOGLE_SECRET='YOUR VALUE'
